fix z-index

--- a/style.css
+++ b/style.css
@@ -126,6 +126,7 @@ input {
   height: 100%;
   position: fixed;
   top: 0;
+  z-index: 2000;
 }
 
 .popupjs-wrapper {
